# moe-lab

./: .gitignore  Makefile  README.md  g0.sh  g1.sh  g2.sh  g3.sh  g5.sh  moe_trainer.py  moelab_main.py  pyproject.toml  readme.md  run_clm.py  utils.py
annotated/: moe.py  moe_drop_tokens.py  moe_shared_experts.py  moe_v0.py  moe_v1.py  readme.txt  test_moe.py
assets/: readme.md  results.csv
src/moelab/: __init__.py  trainer.py
src/moelab/deepseek_v3/: register.py  trainer.py
src/moelab/moedl/: __init__.py  autograd_grouped_gemm.py  configuration_moedl.py  grouped_gemm_triton.py  grouped_glu.py  modeling_moedl.py  naive_autograd_grouped_gemm.py  register.py  trainer.py
src/moelab/olmoe/: modeling_olmoe.py  register.py  trainer.py
src/moelab/utils/: __init__.py  pngs2gif.py  tensor_meter.py
tests/: test_grouped_gemm_equivalence.py  test_moedl.py  test_moedl_trainer.py  test_tensor_meter.py
